crates/monitrs-tui/tests/snapshots/view_snapshots__the_very_first_frame_before_any_snapshot.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: "text_of(&frame(&state, ascii()))"
---
|+ monitrs  host:unknown  [>LIVE]  1s  up.warming up -------------------------------------------------------------------------- --:--:--Z --+|
|| CPU .warming up [.......................................................................................................................]||
|| MEM .warming up [.......................................................................................................................]||
|+ PRESSURE -----------------------+ HISTORY 5m --------------------------------------------------------------------------------------------+|
||                                 | CPU                                                                                                    ||
||                                 | MEM                                                                                                    ||
||                                 | I/O                                                                                                    ||
||                                 | CORE                                                                                                   ||
||                                 |                                                                                                        ||
|+ PROCESSES  sort CPU% desc --------------------------------------------------------------------------------------------------- 0 total ---+|
||warming up                                                                                                                                ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+ PINS ---------------------------------------------------------------+ NETWORK -----------------------------------------------------------+|
|| nothing pinned; p pins the selected process                         | no sample yet                                                      ||
||                                                                     |                                                                    ||
|+---------------------------------------------------------------------+--------------------------------------------------------------------+|
|[1 Overview] 2 Processes  3 CPU  4 Storage  5 Network  6 Inspect                                                            / filter  ? help|
