crates/monitrs-tui/tests/snapshots/view_snapshots__too_small_layout_shows_the_resize_notice.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
assertion_line: 435
expression: text
---
|                                                    |
|                                                    |
|                                                    |
|                                                    |
|            monitrs needs at least 60x16            |
|              current terminal: 52x12               |
|             resize or press q to quit              |
|                                                    |
|                                                    |
|                                                    |
|                                                    |
|                                                    |
