crates/monitrs-tui/tests/snapshots/view_snapshots__tree_mode.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
assertion_line: 655
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:23Z --+|
|| CPU   79% [############################################################=---------------]  load  4.12 3.84 3.21  8 cpu  8 core  temp 62.5C||
|| MEM   71% [#####################################################=----------------------]  23G/32G  swap 205M/2.0G  bat 82%-              ||
|+ PROCESSES  sort PID asc  tree ----------------------------------------------------------------------------------------------- 7 total ---+|
||      PID USER     S   CPU%  MEM%   RSS  VIRT  READ/s WRITE/s  THR      AGE NAME                     COMMAND                              ||
||>       1 gabor    S   0.1%  0.1%   32M  192M  256K/s  512K/s    4    01:23 launchd                  /sbin/launchd                        ||
||      500 gabor    S   1.0%  0.1%   32M  192M  256K/s  512K/s    4    01:23 +- sshd                  sshd: gabor                          ||
||      501 gabor    S   2.0%  0.1%   32M  192M  256K/s  512K/s    4    01:23 | `- bash                -bash                                ||
||      502 gabor    S   9.0%  0.1%   32M  192M  256K/s  512K/s    4    01:23 |   `- cargo             cargo build --release                ||
||      503 gabor    S   287%  0.1%   32M  192M  256K/s  512K/s    4    01:23 |     +- rustc           rustc --crate-name monitrs           ||
||      504 gabor    S   140%  0.1%   32M  192M  256K/s  512K/s    4    01:23 |     `- rustc           rustc --crate-name monitrs_core      ||
||      600 gabor    S     0%  0.1%   32M  192M  256K/s  512K/s    4    01:23 `- cron                  /usr/sbin/cron                       ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
| 1 Overview [2 Processes] 3 Storage  4 Network  5 Inspect                                                                   / filter  ? help|
