crates/monitrs-tui/tests/snapshots/view_snapshots__true_color_mode_styles.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: "styles_of(&frame(&state, ascii()))"
---
 0: 1xRgb(59, 66, 82)/Reset/DIM 8xRgb(122, 162, 247)/Reset/BOLD | DIM 2xRgb(59, 66, 82)/Reset/DIM 12xRgb(214, 218, 227)/Reset/DIM 2xRgb(59, 66, 82)/Reset/DIM 7xRgb(121, 201, 143)/Reset/DIM 2xRgb(59, 66, 82)/Reset/DIM 2xRgb(124, 132, 148)/Reset/DIM 2xRgb(59, 66, 82)/Reset/DIM 12xRgb(124, 132, 148)/Reset/DIM 36xRgb(59, 66, 82)/Reset/DIM 11xRgb(124, 132, 148)/Reset/DIM 3xRgb(59, 66, 82)/Reset/DIM
 1: 1xRgb(59, 66, 82)/Reset/DIM 1xReset/Reset/NONE 4xRgb(124, 132, 148)/Reset/DIM 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 38xRgb(214, 218, 227)/Reset/NONE 2xReset/Reset/NONE 47xRgb(124, 132, 148)/Reset/DIM 1xRgb(59, 66, 82)/Reset/DIM
 2: 1xRgb(59, 66, 82)/Reset/DIM 1xReset/Reset/NONE 4xRgb(124, 132, 148)/Reset/DIM 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 38xRgb(214, 218, 227)/Reset/NONE 2xReset/Reset/NONE 47xRgb(124, 132, 148)/Reset/DIM 1xRgb(59, 66, 82)/Reset/DIM
 3: 1xRgb(59, 66, 82)/Reset/DIM 12xRgb(214, 218, 227)/Reset/DIM 67xRgb(59, 66, 82)/Reset/DIM 16xRgb(124, 132, 148)/Reset/DIM 4xRgb(59, 66, 82)/Reset/DIM
 4: 1xRgb(59, 66, 82)/Reset/DIM 1xReset/Reset/NONE 5xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 91xRgb(122, 162, 247)/Reset/NONE 1xRgb(59, 66, 82)/Reset/DIM
 5: 1xRgb(59, 66, 82)/Reset/DIM 1xReset/Reset/NONE 5xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 91xRgb(121, 201, 143)/Reset/NONE 1xRgb(59, 66, 82)/Reset/DIM
 6: 1xRgb(59, 66, 82)/Reset/DIM 1xReset/Reset/NONE 5xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 91xRgb(224, 175, 104)/Reset/NONE 1xRgb(59, 66, 82)/Reset/DIM
 7: 1xRgb(59, 66, 82)/Reset/DIM 1xReset/Reset/NONE 5xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 91xRgb(199, 146, 234)/Reset/NONE 1xRgb(59, 66, 82)/Reset/DIM
 8: 1xRgb(86, 182, 194)/Reset/BOLD 27xRgb(122, 162, 247)/Reset/BOLD 59xRgb(86, 182, 194)/Reset/BOLD 9xRgb(124, 132, 148)/Reset/BOLD | DIM 4xRgb(86, 182, 194)/Reset/BOLD
 9: 1xRgb(86, 182, 194)/Reset/BOLD 1xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 7xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 8xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 1xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 6xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 5xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 5xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 7xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 7xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 4xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 8xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 28xRgb(124, 132, 148)/Reset/DIM 1xRgb(86, 182, 194)/Reset/BOLD
10: 1xRgb(86, 182, 194)/Reset/BOLD 2xRgb(214, 218, 227)/Rgb(38, 50, 80)/NONE 7xRgb(124, 132, 148)/Rgb(38, 50, 80)/DIM 10xRgb(214, 218, 227)/Rgb(38, 50, 80)/NONE 1xRgb(124, 132, 148)/Rgb(38, 50, 80)/DIM 78xRgb(214, 218, 227)/Rgb(38, 50, 80)/NONE 1xRgb(86, 182, 194)/Reset/BOLD
11: 1xRgb(86, 182, 194)/Reset/BOLD 1xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 8xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 1xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 6xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 4xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 8xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 28xRgb(214, 218, 227)/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
12: 1xRgb(86, 182, 194)/Reset/BOLD 1xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 8xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 1xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 6xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 4xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 8xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 28xRgb(214, 218, 227)/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
13: 1xRgb(86, 182, 194)/Reset/BOLD 1xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 8xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 1xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 6xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 4xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 8xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 28xRgb(214, 218, 227)/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
14: 1xRgb(86, 182, 194)/Reset/BOLD 1xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 8xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 1xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 6xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 5xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 4xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 8xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 28xRgb(214, 218, 227)/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
15: 1xRgb(86, 182, 194)/Reset/BOLD 98xReset/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
16: 1xRgb(86, 182, 194)/Reset/BOLD 98xReset/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
17: 1xRgb(86, 182, 194)/Reset/BOLD 98xReset/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
18: 1xRgb(86, 182, 194)/Reset/BOLD 98xReset/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
19: 1xRgb(86, 182, 194)/Reset/BOLD 98xReset/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
20: 1xRgb(86, 182, 194)/Reset/BOLD 98xReset/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
21: 1xRgb(86, 182, 194)/Reset/BOLD 98xReset/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
22: 1xRgb(86, 182, 194)/Reset/BOLD 98xReset/Reset/NONE 1xRgb(86, 182, 194)/Reset/BOLD
23: 1xRgb(59, 66, 82)/Reset/DIM 10xRgb(214, 218, 227)/Reset/DIM 77xRgb(59, 66, 82)/Reset/DIM 8xRgb(124, 132, 148)/Reset/DIM 4xRgb(59, 66, 82)/Reset/DIM
24: 1xRgb(59, 66, 82)/Reset/DIM 1xReset/Reset/NONE 1xRgb(121, 201, 143)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 8xRgb(121, 201, 143)/Reset/NONE 1xReset/Reset/NONE 8xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 69xRgb(121, 201, 143)/Reset/NONE 1xRgb(59, 66, 82)/Reset/DIM
25: 1xRgb(59, 66, 82)/Reset/DIM 1xReset/Reset/NONE 1xRgb(121, 201, 143)/Reset/NONE 1xReset/Reset/NONE 7xRgb(214, 218, 227)/Reset/NONE 1xReset/Reset/NONE 8xRgb(121, 201, 143)/Reset/NONE 1xReset/Reset/NONE 8xRgb(124, 132, 148)/Reset/DIM 1xReset/Reset/NONE 69xRgb(121, 201, 143)/Reset/NONE 1xRgb(59, 66, 82)/Reset/DIM
26: 100xRgb(59, 66, 82)/Reset/DIM
27: 12xRgb(122, 162, 247)/Reset/BOLD 64xRgb(124, 132, 148)/Reset/DIM 8xReset/Reset/NONE 16xRgb(124, 132, 148)/Reset/DIM
